<?xml version="1.0" encoding="utf-8"?>
<!-- Got material design background from https://365webresources.com/android-google-material-design-freebies/4/ -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/start_background_v3"
    >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical"
        android:layout_weight="1"
        >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="Sign up"
            android:gravity="center"
            android:fontFamily="@font/helvetic_neuva_condensed"
            android:textSize="40dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            />

        <TextView
            android:paddingTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="First name"
            android:fontFamily="@font/arial_regular"
            android:textColor="@color/white"
            android:textSize="14dp"/>

        <EditText
            android:id="@+id/edittext_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:backgroundTint="@color/white"
            android:textColor="@color/white"
            android:inputType="textPersonName"

            />
        <TextView
            android:id="@+id/textview_firstname_error_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/this_field_is_required"
            android:fontFamily="@font/arial_regular"
            android:textColor="@color/pinkRed"
            android:textSize="14dp"
            android:visibility="invisible"/>

        <TextView
            android:paddingTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Email"
            android:fontFamily="@font/arial_regular"
            android:textColor="@color/white"
            android:textSize="14dp"/>

        <EditText
            android:id="@+id/edittext_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:backgroundTint="@color/white"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/textview_email_error_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/this_field_is_required"
            android:fontFamily="@font/arial_regular"
            android:textColor="@color/pinkRed"
            android:textSize="14dp"
            android:visibility="invisible"/>

        <TextView
            android:paddingTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Password"
            android:fontFamily="@font/arial_regular"
            android:textColor="@color/white"
            android:textSize="14dp"/>

        <EditText
            android:id="@+id/edittext_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:backgroundTint="@color/white"
            android:inputType="textPassword"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/textview_password_error_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/this_field_is_required"
            android:fontFamily="@font/arial_regular"
            android:textColor="@color/pinkRed"
            android:textSize="14dp"
            android:visibility="invisible"/>


        <TextView
            android:paddingTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Confirm Password"
            android:fontFamily="@font/arial_regular"
            android:textColor="@color/white"
            android:textSize="14dp"/>

        <EditText
            android:id="@+id/edittext_confirmpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:backgroundTint="@color/white"
            android:inputType="textPassword"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/textview_passwords_error_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/passwords_does_not_match"
            android:fontFamily="@font/arial_regular"
            android:textColor="@color/pinkRed"
            android:textSize="14dp"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/sign_up_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/sign_up_button"
            android:fontFamily="@font/helvetic_neuva_condensed"
            android:onClick="signUpButtonClicked"
            android:text="Sign up"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/loginLinkText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arial_regular"
            android:gravity="bottom|center"
            android:onClick="loginLinkTextClicked"
            android:paddingTop="10dp"
            android:text="@string/login"

            android:textColor="@color/white"
            android:textSize="14dp" />

    </LinearLayout>



</LinearLayout>